# SP-project

./: .gitattributes  .gitignore  mygame.slnx
mygame/: CMakeLists.txt  mygame.cpp  mygame.vcxproj  mygame.vcxproj.filters  users.txt
